<resources>
    <string name="app_name">SpotifyMVP</string>


    <!-- LOGIN SCREEN -->
    <string name="login_screen_title">Login</string>
    <string name="login_screen_login_button_label">Authentication</string>
    <string name="login_screen_login_failed_msg">Authentication failed</string>


    <!-- MAIN SCREEN -->
    <string name="main_screen_title">Home</string>
    <string name="view_profile_label">View Profile</string>
    <string name="view_albums_label">View Albums</string>
    <string name="view_categories_label">View Categories</string>
    <string name="main_search_action_label">Search</string>


    <!-- PROFILE SCREEN -->
    <string name="profile_screen_title">Profile</string>
    <string name="profile_birthdate_label">Birthdate:</string>
    <string name="profile_country_label">Country:</string>
    <string name="profile_email_label">Email:</string>
    <string name="profile_product_label">Product:</string>
    <string name="profile_type_label">Type:</string>
    <string name="profile_followers_label">Followers:</string>
    <string name="profile_id_label">Id:</string>


    <!-- ALBUMS SCREEN -->
    <string name="albums_screen_title">Albums</string>
    <string name="albums_no_items_label">No albums available.</string>
    <string name="album_number_of_tracks_label">Tracks:</string>
    <string name="album_release_date_label">Release date:</string>


    <!-- SONGS SCREEN -->
    <string name="songs_screen_title">Songs</string>
    <string name="song_duration_label">Duration:</string>
    <string name="song_explicit_label">Explicit</string>


    <!-- CATEGORIES SCREEN -->
    <string name="categories_screen_title">Categories</string>
    <string name="categories_no_items_label">No categories available.</string>


    <!-- PLAYLISTS SCREEN -->
    <string name="playlists_screen_title">Playlists</string>
</resources>
