<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">


    <!-- VIEW PROFILE BUTTON -->
    <Button
        android:id="@+id/view_profile_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_profile_label"
        />


    <!-- VIEW ALBUMS BUTTON -->
    <Button
        android:id="@+id/view_albums_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/view_albums_label" />


    <!-- VIEW CATEGORIES BUTTON -->
    <Button
        android:id="@+id/view_categories_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/view_categories_label"/>

</LinearLayout>